# de-zero-to-hero

./: .gitignore  LICENSE  README.md
buoi-01-linux/: Makefile  README.md
buoi-01-linux/data/raw/: orders.csv
buoi-01-linux/scripts/: batch_process.sh  check_data.sh  lab_check.sh  web_crawler.sh
buoi-02-python/: README.md  pyproject.toml
buoi-02-python/src/: etl_pipeline.py
buoi-02-python/src/extractors/: async_http_extractor.py  file_extractor.py
buoi-02-python/src/loaders/: file_loader.py
buoi-02-python/src/transformers/: order_transformer.py
buoi-02-python/src/utils/: data_structures.py  error_handling.py
buoi-03-sql/: README.md  query_db.py
buoi-03-sql/sql/: 01_schema.sql  02_seed_data.sql  03_queries.sql  04_performance.sql
buoi-04-fastapi/: .env.example  README.md  locustfile.py  pyproject.toml
buoi-04-fastapi/app/: main.py
buoi-04-fastapi/app/core/: auth.py  config.py  database.py
buoi-04-fastapi/app/models/: models.py
buoi-04-fastapi/app/routers/: analytics.py  auth.py  customers.py
buoi-04-fastapi/app/schemas/: schemas.py
lessons/: buoi-01-linux-shell.md  buoi-02-python-etl.md  buoi-03-database-sql.md  buoi-04-fastapi.md
