[project]
name = "b02-python"
version = "0.1.0"
description = "Buổi 2 — ETL Pipeline lab cho Data Engineer: Zero to Hero"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "pyarrow",
    "pydantic",
    "loguru",
    "rich",
    "tqdm",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
