[project]
name = "b04-fastapi"
version = "0.1.0"
description = "Buổi 4 — REST API với FastAPI + JWT cho Data Engineer: Zero to Hero"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic[email]",          # [email] -> kéo email-validator cho EmailStr
    "pydantic-settings",
    "sqlalchemy",
    "psycopg2-binary",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "bcrypt<4.1",               # pin: passlib 1.7.4 không đọc được version của bcrypt>=4.1
    "python-multipart",
]

[dependency-groups]
dev = [
    "locust",
    "httpx",
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
